platform/istio/config/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-leninkart-product-service
  namespace: dev
spec:
  host: leninkart-product-service.dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-leninkart-order-service
  namespace: dev
spec:
  host: leninkart-order-service.dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-leninkart-frontend
  namespace: dev
spec:
  host: leninkart-frontend.dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-postgres
  namespace: dev
spec:
  host: postgres.dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-kafka
  namespace: dev
spec:
  host: kafka.dev.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
