platform/istio/config/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leninkart-routes
  namespace: dev
spec:
  hosts:
    - "*"
  gateways:
    - leninkart-gateway
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: leninkart-product-service
            port:
              number: 8081
    - match:
        - uri:
            prefix: /api/products
      route:
        - destination:
            host: leninkart-product-service
            port:
              number: 8081
    - match:
        - uri:
            prefix: /api/orders
      route:
        - destination:
            host: leninkart-order-service
            port:
              number: 8080
      timeout: 15s
      retries:
        attempts: 3
        perTryTimeout: 5s
        retryOn: connect-failure,refused-stream,unavailable,5xx
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: leninkart-frontend
            port:
              number: 80
